--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello world</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1 class="heading">hello world</h1>
+    <button class="button1">To add css</button>
 
 
-
-
+    <script src="./index.js"></script>
 </body>
 </html>
